<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Studientag DHBW Stuttgart</string>
    <string name="action_settings">Settings</string>
    <string name="label_faculties">Fakultäten &amp; Studiengänge</string>
    <string name="label_companies">Unternehmen</string>
    <string name="label_search">Suche</string>
    <string name="title_activity_company">Company</string>
    <string name="label_companyName">Duale Hochschule Baden-Württemberg</string>
    <string name="label_companyWWW">http://www.dhbw-stuttgart.de</string>
    <string name="label_companyCity">Stuttgart</string>
    <string name="label_select_faculty">Wähle die Faktultät</string>
    <string name="title_activity_faculty">FacultyActivity</string>
    <string name="search_hint">Suche Unternehmen</string>
    <string name="label_faculty">Fakultät</string>
    <string name="label_companyBuilding">RB41</string>
    <string name="label_companyRoom">1.18</string>
    <string name="title_activity_locations">Lokationen &amp; Gebäude</string>
    <string name="label_companyCityDesc">Sitz des Unternehmens:</string>
    <string name="label_companyProfile">Steckbrief</string>
    <string name="title_activity_comment">Notiz</string>
    <string name="title_activity_comments">Notizen</string>
    <string name="label_comments">Notizen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tours">Touren</string>
    <string name="title_activity_tour">Tour</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_TourName">Meine Tour</string>
    <string name="label_tours">Touren</string>
    <string name="label_addToTour">Zur Tour hinzufügen</string>
    <string name="label_Select_Tour">Hinzufügen zu Tour</string>
    <string name="label_create_new_Tour">Neue Tour erstellen</string>
    <string name="warning_tourName_exists">Dieser Tour Name existiert bereits</string>
    <string name="warning_empty_TourName">Bitte einen Tour Namen eingeben</string>
    <string name="delete">Löschen</string>
    <string name="dhbw_stuttgart">DHBW Stuttgart</string>
    <string name="main_heading">Studientag</string>
    <string name="label_share">Teilen</string>
    <string name="label_import_tour">Tour importieren</string>
    <string name="label_nfc_enabled">NFC ist aktiviert</string>
    <string name="label_nfc_disabled">NFC ist deaktiviert</string>
    <string name="label_wait_for_Tag">Warte auf NFC Tag</string>
    <string name="label_activate_nfc">Bitte NFC aktivieren</string>
    <string name="title_map">Map</string>
    <string name="label_begin_share_message">Hallo, ich habe für den Studientag der DHBW Stuttgart eine Liste mit interessanten Unternehmen zusammengestellt.</string>
    <string name="room">Raum</string>
    <string name="label_export">Tour exportieren</string>
    <string name="label_no_nfc_support">diese Funktion benötigt NFC</string>
    <string name="title_activity_location_spiele">LocationSpieleActivity</string>
    <string name="label_show_location">Show Location</string>
    <string name="label_mylocation">mein Ort</string>
    <string name="label_btn_order_list">sortiere Lokationen</string>
    <string name="label_calc_best_way">optimale Reihenfolge</string>
    <string name="label_stations">Stationen</string>
    <string name="label_tour_import_successfull">Tour erfolgreich importiert</string>
    <string name="label_tour_export_successfull">Tour erfolgreich exportiert</string>
    <string name="label_save_comment">Notiz speichern</string>
    <string name="label_delete_comment">Notiz löschen</string>
    <string name="label_add_company">Hinzufügen zu</string>
    <string name="label_write_to_nfc_fail">Schreiben fehlgeschlagen</string>
    <string name="label_tour_import_fail">Tour Import fehlgeschlagen. Korrupter Tag?</string>
    <string name="title_export_tour">Tour Exportieren</string>
    <string name="error_on_tour_sort">Erstelle die Tour bitte neu</string>
    <string name="label_list_item">List Item</string>
    <string name="label_list_picture">List Picture</string>
    <string name="label_comment_info">Hier kannst du Notizen zu einzelnen Unternehmen, erstellen, ansehen, bearbeiten und löschen</string>
    <string name="label_add_comment">Notiz hinzufügen</string>
    <string name="label_subject_info_link">Info Link</string>
    <string name="label_subject_name">Angewandte Informatik</string>
    <string name="label_faculty_icon">Fakultätsicon</string>
    <string name="title_new_comment">Neue Notiz zu:</string>
    <string name="label_go_to_company_at_DHBW">Springe zu  Unternehmeninformationsstand</string>
    <string name="label_display_route">Route anzeigen</string>
    <string name="label_tour_info">Hier kannst du interessante Unternehmen sammeln und zu einer Tour zusammenfassen.\nDadurch behältst du den Überblick über den Standort Ihrer Informationsstände.</string>
    <string name="label_dhbw_stuttgart">DHBW Stuttgart</string>
    <string name="label_comment_removed">Kommentar gelöscht</string>
    <string name="dispaly_info">Info anzeigen</string>
    <string name="label_subject_color">Farbkreis Studienang</string>
    <string name="label_company_information_location">Standort des Informationsstandes:</string>
    <string name="title_activity_software_licenses">Software Lizenzen</string>
    <string name="label_please_wait">Bitte warten</string>
    <string name="label_legal_notices">Rechtliches</string>

</resources>