<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants" 
    android:paddingBottom="@dimen/textView_paddingBottom" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/binItemFirstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_companyName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/bintemSecondLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_companyRoom" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/binItemDelete"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/delete"
        
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_menu_delete" />

</LinearLayout>