<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CompanyActivity" >

    <TextView
        android:id="@+id/textView_companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_companyName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_companyWWW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_companyWWW"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_companyCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_companyCity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listView_companyOfferedSubjects"
        android:layout_width="match_parent"
        android:layout_height="123dp" >
    </ListView>

</LinearLayout>